Scan cable devices once per tick instead of once per push